# DAG_Compression_Fast

./: CMakeLists.txt  DAG_Compression_Fast.sln  DAG_Compression_Fast.vcxproj  DAG_Compression_Fast.vcxproj.filters  LICENSE  README.md  Tracy.lnk  start.bat
Python/: constant32.csv  constant64.csv  plot_sort_stats.py  variable32.csv  variable64.csv
Shaders/: FragmentShader.glsl  GeometryShader.glsl  VertexShader.glsl
src/: Array.h  Array.natvis  Core.h  CudaGLBuffer.h  CudaMath.h  CudaPerfRecorder.h  DAGCompression.cu  DAGCompression.h  DAGTracer.cu  DAGTracer.h  DAG_Compression_Fast.cpp  DAG_Compression_Fast.cu  Definitions.cpp  Engine.h  GLTFLoader.cpp  GLTFLoader.h  GpuPrimitives.h  Memory.cpp  Memory.h  Serializer.h  Thread.h  Threadpool.h  Utils.h  Voxelizer.cpp  Voxelizer.h  cnmem.cpp  cnmem.h
src/DAGCompression/: CheckDAG.cu  CheckGPU.cu  Compress.cpp  CreateFinalDAG.cu  CreateSubDAG.cu  DAGCompression.h  GenerateFragments.cu  MergeDAG.cu
src/Utils/: Aabb.h  View.h  glm_extensions.cpp  glm_extensions.h
src/cub/grid/: grid_even_share.cuh
src/glm/detail/: func_integer.inl
src/gmath/: Vector3.h
src/moderngpu/: context.hxx  meta.hxx  transform.hxx  tuple.hxx
src/stb/: stb_vorbis.c
src/tracy/: TracyClient.cpp
src/tracy/client/: TracyDxt1.cpp  TracyProfiler.cpp  TracyProfiler.hpp
src/tracy/common/: TracySocket.cpp  TracySystem.cpp
