cmake_minimum_required(VERSION 3.14)
project(DAG_Compression_Fast LANGUAGES CUDA CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CUDA_STANDARD 14)

find_package(CUDA REQUIRED)
find_package(GLEW REQUIRED)

include_directories("${CUDA_INCLUDE_DIRS}")

set(CMAKE_CUDA_HOST_COMPILER gcc-8)

set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS}; -gencode arch=compute_61,code=sm_61)
set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} --expt-relaxed-constexpr --extended-lambda")

include_directories(src)

add_executable(DAG_Compression_Fast
        src/cub/agent/agent_histogram.cuh
        src/cub/agent/agent_radix_sort_downsweep.cuh
        src/cub/agent/agent_radix_sort_upsweep.cuh
        src/cub/agent/agent_reduce.cuh
        src/cub/agent/agent_reduce_by_key.cuh
        src/cub/agent/agent_rle.cuh
        src/cub/agent/agent_scan.cuh
        src/cub/agent/agent_segment_fixup.cuh
        src/cub/agent/agent_select_if.cuh
        src/cub/agent/agent_spmv_orig.cuh
        src/cub/agent/single_pass_scan_operators.cuh
        src/cub/block/specializations/block_histogram_atomic.cuh
        src/cub/block/specializations/block_histogram_sort.cuh
        src/cub/block/specializations/block_reduce_raking.cuh
        src/cub/block/specializations/block_reduce_raking_commutative_only.cuh
        src/cub/block/specializations/block_reduce_warp_reductions.cuh
        src/cub/block/specializations/block_scan_raking.cuh
        src/cub/block/specializations/block_scan_warp_scans.cuh
        src/cub/block/specializations/block_scan_warp_scans2.cuh
        src/cub/block/specializations/block_scan_warp_scans3.cuh
        src/cub/block/block_adjacent_difference.cuh
        src/cub/block/block_discontinuity.cuh
        src/cub/block/block_exchange.cuh
        src/cub/block/block_histogram.cuh
        src/cub/block/block_load.cuh
        src/cub/block/block_radix_rank.cuh
        src/cub/block/block_radix_sort.cuh
        src/cub/block/block_raking_layout.cuh
        src/cub/block/block_reduce.cuh
        src/cub/block/block_scan.cuh
        src/cub/block/block_shuffle.cuh
        src/cub/block/block_store.cuh
        src/cub/device/dispatch/dispatch_histogram.cuh
        src/cub/device/dispatch/dispatch_radix_sort.cuh
        src/cub/device/dispatch/dispatch_reduce.cuh
        src/cub/device/dispatch/dispatch_reduce_by_key.cuh
        src/cub/device/dispatch/dispatch_rle.cuh
        src/cub/device/dispatch/dispatch_scan.cuh
        src/cub/device/dispatch/dispatch_select_if.cuh
        src/cub/device/dispatch/dispatch_spmv_orig.cuh
        src/cub/device/device_histogram.cuh
        src/cub/device/device_partition.cuh
        src/cub/device/device_radix_sort.cuh
        src/cub/device/device_reduce.cuh
        src/cub/device/device_run_length_encode.cuh
        src/cub/device/device_scan.cuh
        src/cub/device/device_segmented_radix_sort.cuh
        src/cub/device/device_segmented_reduce.cuh
        src/cub/device/device_select.cuh
        src/cub/device/device_spmv.cuh
        src/cub/grid/grid_barrier.cuh
        src/cub/grid/grid_even_share.cuh
        src/cub/grid/grid_mapping.cuh
        src/cub/grid/grid_queue.cuh
        src/cub/host/mutex.cuh
        src/cub/iterator/arg_index_input_iterator.cuh
        src/cub/iterator/cache_modified_input_iterator.cuh
        src/cub/iterator/cache_modified_output_iterator.cuh
        src/cub/iterator/constant_input_iterator.cuh
        src/cub/iterator/counting_input_iterator.cuh
        src/cub/iterator/discard_output_iterator.cuh
        src/cub/iterator/tex_obj_input_iterator.cuh
        src/cub/iterator/tex_ref_input_iterator.cuh
        src/cub/iterator/transform_input_iterator.cuh
        src/cub/thread/thread_load.cuh
        src/cub/thread/thread_operators.cuh
        src/cub/thread/thread_reduce.cuh
        src/cub/thread/thread_scan.cuh
        src/cub/thread/thread_search.cuh
        src/cub/thread/thread_store.cuh
        src/cub/warp/specializations/warp_reduce_shfl.cuh
        src/cub/warp/specializations/warp_reduce_smem.cuh
        src/cub/warp/specializations/warp_scan_shfl.cuh
        src/cub/warp/specializations/warp_scan_smem.cuh
        src/cub/warp/warp_reduce.cuh
        src/cub/warp/warp_scan.cuh
        src/cub/cub.cuh
        src/cub/util_allocator.cuh
        src/cub/util_arch.cuh
        src/cub/util_debug.cuh
        src/cub/util_device.cuh
        src/cub/util_macro.cuh
        src/cub/util_namespace.cuh
        src/cub/util_ptx.cuh
        src/cub/util_type.cuh
        src/glm/detail/_features.hpp
        src/glm/detail/_fixes.hpp
        src/glm/detail/_noise.hpp
        src/glm/detail/_swizzle.hpp
        src/glm/detail/_swizzle_func.hpp
        src/glm/detail/_vectorize.hpp
        src/glm/detail/compute_common.hpp
        src/glm/detail/compute_vector_relational.hpp
        src/glm/detail/func_common.inl
        src/glm/detail/func_common_simd.inl
        src/glm/detail/func_exponential.inl
        src/glm/detail/func_exponential_simd.inl
        src/glm/detail/func_geometric.inl
        src/glm/detail/func_geometric_simd.inl
        src/glm/detail/func_integer.inl
        src/glm/detail/func_integer_simd.inl
        src/glm/detail/func_matrix.inl
        src/glm/detail/func_matrix_simd.inl
        src/glm/detail/func_packing.inl
        src/glm/detail/func_packing_simd.inl
        src/glm/detail/func_trigonometric.inl
        src/glm/detail/func_trigonometric_simd.inl
        src/glm/detail/func_vector_relational.inl
        src/glm/detail/func_vector_relational_simd.inl
        src/glm/detail/glm.cpp
        src/glm/detail/qualifier.hpp
        src/glm/detail/setup.hpp
        src/glm/detail/type_float.hpp
        src/glm/detail/type_half.hpp
        src/glm/detail/type_half.inl
        src/glm/detail/type_mat2x2.hpp
        src/glm/detail/type_mat2x2.inl
        src/glm/detail/type_mat2x3.hpp
        src/glm/detail/type_mat2x3.inl
        src/glm/detail/type_mat2x4.hpp
        src/glm/detail/type_mat2x4.inl
        src/glm/detail/type_mat3x2.hpp
        src/glm/detail/type_mat3x2.inl
        src/glm/detail/type_mat3x3.hpp
        src/glm/detail/type_mat3x3.inl
        src/glm/detail/type_mat3x4.hpp
        src/glm/detail/type_mat3x4.inl
        src/glm/detail/type_mat4x2.hpp
        src/glm/detail/type_mat4x2.inl
        src/glm/detail/type_mat4x3.hpp
        src/glm/detail/type_mat4x3.inl
        src/glm/detail/type_mat4x4.hpp
        src/glm/detail/type_mat4x4.inl
        src/glm/detail/type_mat4x4_simd.inl
        src/glm/detail/type_quat.hpp
        src/glm/detail/type_quat.inl
        src/glm/detail/type_quat_simd.inl
        src/glm/detail/type_vec1.hpp
        src/glm/detail/type_vec1.inl
        src/glm/detail/type_vec2.hpp
        src/glm/detail/type_vec2.inl
        src/glm/detail/type_vec3.hpp
        src/glm/detail/type_vec3.inl
        src/glm/detail/type_vec4.hpp
        src/glm/detail/type_vec4.inl
        src/glm/detail/type_vec4_simd.inl
        src/glm/ext/matrix_clip_space.hpp
        src/glm/ext/matrix_clip_space.inl
        src/glm/ext/matrix_double2x2.hpp
        src/glm/ext/matrix_double2x2_precision.hpp
        src/glm/ext/matrix_double2x3.hpp
        src/glm/ext/matrix_double2x3_precision.hpp
        src/glm/ext/matrix_double2x4.hpp
        src/glm/ext/matrix_double2x4_precision.hpp
        src/glm/ext/matrix_double3x2.hpp
        src/glm/ext/matrix_double3x2_precision.hpp
        src/glm/ext/matrix_double3x3.hpp
        src/glm/ext/matrix_double3x3_precision.hpp
        src/glm/ext/matrix_double3x4.hpp
        src/glm/ext/matrix_double3x4_precision.hpp
        src/glm/ext/matrix_double4x2.hpp
        src/glm/ext/matrix_double4x2_precision.hpp
        src/glm/ext/matrix_double4x3.hpp
        src/glm/ext/matrix_double4x3_precision.hpp
        src/glm/ext/matrix_double4x4.hpp
        src/glm/ext/matrix_double4x4_precision.hpp
        src/glm/ext/matrix_float2x2.hpp
        src/glm/ext/matrix_float2x2_precision.hpp
        src/glm/ext/matrix_float2x3.hpp
        src/glm/ext/matrix_float2x3_precision.hpp
        src/glm/ext/matrix_float2x4.hpp
        src/glm/ext/matrix_float2x4_precision.hpp
        src/glm/ext/matrix_float3x2.hpp
        src/glm/ext/matrix_float3x2_precision.hpp
        src/glm/ext/matrix_float3x3.hpp
        src/glm/ext/matrix_float3x3_precision.hpp
        src/glm/ext/matrix_float3x4.hpp
        src/glm/ext/matrix_float3x4_precision.hpp
        src/glm/ext/matrix_float4x2.hpp
        src/glm/ext/matrix_float4x2_precision.hpp
        src/glm/ext/matrix_float4x3.hpp
        src/glm/ext/matrix_float4x3_precision.hpp
        src/glm/ext/matrix_float4x4.hpp
        src/glm/ext/matrix_float4x4_precision.hpp
        src/glm/ext/matrix_projection.hpp
        src/glm/ext/matrix_projection.inl
        src/glm/ext/matrix_relational.hpp
        src/glm/ext/matrix_relational.inl
        src/glm/ext/matrix_transform.hpp
        src/glm/ext/matrix_transform.inl
        src/glm/ext/quaternion_common.hpp
        src/glm/ext/quaternion_common.inl
        src/glm/ext/quaternion_common_simd.inl
        src/glm/ext/quaternion_double.hpp
        src/glm/ext/quaternion_double_precision.hpp
        src/glm/ext/quaternion_exponential.hpp
        src/glm/ext/quaternion_exponential.inl
        src/glm/ext/quaternion_float.hpp
        src/glm/ext/quaternion_float_precision.hpp
        src/glm/ext/quaternion_geometric.hpp
        src/glm/ext/quaternion_geometric.inl
        src/glm/ext/quaternion_relational.hpp
        src/glm/ext/quaternion_relational.inl
        src/glm/ext/quaternion_transform.hpp
        src/glm/ext/quaternion_transform.inl
        src/glm/ext/quaternion_trigonometric.hpp
        src/glm/ext/quaternion_trigonometric.inl
        src/glm/ext/scalar_common.hpp
        src/glm/ext/scalar_common.inl
        src/glm/ext/scalar_constants.hpp
        src/glm/ext/scalar_constants.inl
        src/glm/ext/scalar_int_sized.hpp
        src/glm/ext/scalar_relational.hpp
        src/glm/ext/scalar_relational.inl
        src/glm/ext/scalar_uint_sized.hpp
        src/glm/ext/scalar_ulp.hpp
        src/glm/ext/scalar_ulp.inl
        src/glm/ext/vector_bool1.hpp
        src/glm/ext/vector_bool1_precision.hpp
        src/glm/ext/vector_bool2.hpp
        src/glm/ext/vector_bool2_precision.hpp
        src/glm/ext/vector_bool3.hpp
        src/glm/ext/vector_bool3_precision.hpp
        src/glm/ext/vector_bool4.hpp
        src/glm/ext/vector_bool4_precision.hpp
        src/glm/ext/vector_common.hpp
        src/glm/ext/vector_common.inl
        src/glm/ext/vector_double1.hpp
        src/glm/ext/vector_double1_precision.hpp
        src/glm/ext/vector_double2.hpp
        src/glm/ext/vector_double2_precision.hpp
        src/glm/ext/vector_double3.hpp
        src/glm/ext/vector_double3_precision.hpp
        src/glm/ext/vector_double4.hpp
        src/glm/ext/vector_double4_precision.hpp
        src/glm/ext/vector_float1.hpp
        src/glm/ext/vector_float1_precision.hpp
        src/glm/ext/vector_float2.hpp
        src/glm/ext/vector_float2_precision.hpp
        src/glm/ext/vector_float3.hpp
        src/glm/ext/vector_float3_precision.hpp
        src/glm/ext/vector_float4.hpp
        src/glm/ext/vector_float4_precision.hpp
        src/glm/ext/vector_int1.hpp
        src/glm/ext/vector_int1_precision.hpp
        src/glm/ext/vector_int2.hpp
        src/glm/ext/vector_int2_precision.hpp
        src/glm/ext/vector_int3.hpp
        src/glm/ext/vector_int3_precision.hpp
        src/glm/ext/vector_int4.hpp
        src/glm/ext/vector_int4_precision.hpp
        src/glm/ext/vector_relational.hpp
        src/glm/ext/vector_relational.inl
        src/glm/ext/vector_uint1.hpp
        src/glm/ext/vector_uint1_precision.hpp
        src/glm/ext/vector_uint2.hpp
        src/glm/ext/vector_uint2_precision.hpp
        src/glm/ext/vector_uint3.hpp
        src/glm/ext/vector_uint3_precision.hpp
        src/glm/ext/vector_uint4.hpp
        src/glm/ext/vector_uint4_precision.hpp
        src/glm/ext/vector_ulp.hpp
        src/glm/ext/vector_ulp.inl
        src/glm/gtc/bitfield.hpp
        src/glm/gtc/bitfield.inl
        src/glm/gtc/color_space.hpp
        src/glm/gtc/color_space.inl
        src/glm/gtc/constants.hpp
        src/glm/gtc/constants.inl
        src/glm/gtc/epsilon.hpp
        src/glm/gtc/epsilon.inl
        src/glm/gtc/integer.hpp
        src/glm/gtc/integer.inl
        src/glm/gtc/matrix_access.hpp
        src/glm/gtc/matrix_access.inl
        src/glm/gtc/matrix_integer.hpp
        src/glm/gtc/matrix_inverse.hpp
        src/glm/gtc/matrix_inverse.inl
        src/glm/gtc/matrix_transform.hpp
        src/glm/gtc/matrix_transform.inl
        src/glm/gtc/noise.hpp
        src/glm/gtc/noise.inl
        src/glm/gtc/packing.hpp
        src/glm/gtc/packing.inl
        src/glm/gtc/quaternion.hpp
        src/glm/gtc/quaternion.inl
        src/glm/gtc/quaternion_simd.inl
        src/glm/gtc/random.hpp
        src/glm/gtc/random.inl
        src/glm/gtc/reciprocal.hpp
        src/glm/gtc/reciprocal.inl
        src/glm/gtc/round.hpp
        src/glm/gtc/round.inl
        src/glm/gtc/type_aligned.hpp
        src/glm/gtc/type_precision.hpp
        src/glm/gtc/type_precision.inl
        src/glm/gtc/type_ptr.hpp
        src/glm/gtc/type_ptr.inl
        src/glm/gtc/ulp.hpp
        src/glm/gtc/ulp.inl
        src/glm/gtc/vec1.hpp
        src/glm/gtx/associated_min_max.hpp
        src/glm/gtx/associated_min_max.inl
        src/glm/gtx/bit.hpp
        src/glm/gtx/bit.inl
        src/glm/gtx/closest_point.hpp
        src/glm/gtx/closest_point.inl
        src/glm/gtx/color_encoding.hpp
        src/glm/gtx/color_encoding.inl
        src/glm/gtx/color_space.hpp
        src/glm/gtx/color_space.inl
        src/glm/gtx/color_space_YCoCg.hpp
        src/glm/gtx/color_space_YCoCg.inl
        src/glm/gtx/common.hpp
        src/glm/gtx/common.inl
        src/glm/gtx/compatibility.hpp
        src/glm/gtx/compatibility.inl
        src/glm/gtx/component_wise.hpp
        src/glm/gtx/component_wise.inl
        src/glm/gtx/dual_quaternion.hpp
        src/glm/gtx/dual_quaternion.inl
        src/glm/gtx/easing.hpp
        src/glm/gtx/easing.inl
        src/glm/gtx/euler_angles.hpp
        src/glm/gtx/euler_angles.inl
        src/glm/gtx/extend.hpp
        src/glm/gtx/extend.inl
        src/glm/gtx/extended_min_max.hpp
        src/glm/gtx/extended_min_max.inl
        src/glm/gtx/exterior_product.hpp
        src/glm/gtx/exterior_product.inl
        src/glm/gtx/fast_exponential.hpp
        src/glm/gtx/fast_exponential.inl
        src/glm/gtx/fast_square_root.hpp
        src/glm/gtx/fast_square_root.inl
        src/glm/gtx/fast_trigonometry.hpp
        src/glm/gtx/fast_trigonometry.inl
        src/glm/gtx/float_notmalize.inl
        src/glm/gtx/functions.hpp
        src/glm/gtx/functions.inl
        src/glm/gtx/gradient_paint.hpp
        src/glm/gtx/gradient_paint.inl
        src/glm/gtx/handed_coordinate_space.hpp
        src/glm/gtx/handed_coordinate_space.inl
        src/glm/gtx/hash.hpp
        src/glm/gtx/hash.inl
        src/glm/gtx/integer.hpp
        src/glm/gtx/integer.inl
        src/glm/gtx/intersect.hpp
        src/glm/gtx/intersect.inl
        src/glm/gtx/io.hpp
        src/glm/gtx/io.inl
        src/glm/gtx/log_base.hpp
        src/glm/gtx/log_base.inl
        src/glm/gtx/matrix_cross_product.hpp
        src/glm/gtx/matrix_cross_product.inl
        src/glm/gtx/matrix_decompose.hpp
        src/glm/gtx/matrix_decompose.inl
        src/glm/gtx/matrix_factorisation.hpp
        src/glm/gtx/matrix_factorisation.inl
        src/glm/gtx/matrix_interpolation.hpp
        src/glm/gtx/matrix_interpolation.inl
        src/glm/gtx/matrix_major_storage.hpp
        src/glm/gtx/matrix_major_storage.inl
        src/glm/gtx/matrix_operation.hpp
        src/glm/gtx/matrix_operation.inl
        src/glm/gtx/matrix_query.hpp
        src/glm/gtx/matrix_query.inl
        src/glm/gtx/matrix_transform_2d.hpp
        src/glm/gtx/matrix_transform_2d.inl
        src/glm/gtx/mixed_product.hpp
        src/glm/gtx/mixed_product.inl
        src/glm/gtx/norm.hpp
        src/glm/gtx/norm.inl
        src/glm/gtx/normal.hpp
        src/glm/gtx/normal.inl
        src/glm/gtx/normalize_dot.hpp
        src/glm/gtx/normalize_dot.inl
        src/glm/gtx/number_precision.hpp
        src/glm/gtx/number_precision.inl
        src/glm/gtx/optimum_pow.hpp
        src/glm/gtx/optimum_pow.inl
        src/glm/gtx/orthonormalize.hpp
        src/glm/gtx/orthonormalize.inl
        src/glm/gtx/perpendicular.hpp
        src/glm/gtx/perpendicular.inl
        src/glm/gtx/polar_coordinates.hpp
        src/glm/gtx/polar_coordinates.inl
        src/glm/gtx/projection.hpp
        src/glm/gtx/projection.inl
        src/glm/gtx/quaternion.hpp
        src/glm/gtx/quaternion.inl
        src/glm/gtx/range.hpp
        src/glm/gtx/raw_data.hpp
        src/glm/gtx/raw_data.inl
        src/glm/gtx/rotate_normalized_axis.hpp
        src/glm/gtx/rotate_normalized_axis.inl
        src/glm/gtx/rotate_vector.hpp
        src/glm/gtx/rotate_vector.inl
        src/glm/gtx/scalar_multiplication.hpp
        src/glm/gtx/scalar_relational.hpp
        src/glm/gtx/scalar_relational.inl
        src/glm/gtx/spline.hpp
        src/glm/gtx/spline.inl
        src/glm/gtx/std_based_type.hpp
        src/glm/gtx/std_based_type.inl
        src/glm/gtx/string_cast.hpp
        src/glm/gtx/string_cast.inl
        src/glm/gtx/texture.hpp
        src/glm/gtx/texture.inl
        src/glm/gtx/transform.hpp
        src/glm/gtx/transform.inl
        src/glm/gtx/transform2.hpp
        src/glm/gtx/transform2.inl
        src/glm/gtx/type_aligned.hpp
        src/glm/gtx/type_aligned.inl
        src/glm/gtx/type_trait.hpp
        src/glm/gtx/type_trait.inl
        src/glm/gtx/vec_swizzle.hpp
        src/glm/gtx/vector_angle.hpp
        src/glm/gtx/vector_angle.inl
        src/glm/gtx/vector_query.hpp
        src/glm/gtx/vector_query.inl
        src/glm/gtx/wrap.hpp
        src/glm/gtx/wrap.inl
        src/glm/simd/common.h
        src/glm/simd/exponential.h
        src/glm/simd/geometric.h
        src/glm/simd/integer.h
        src/glm/simd/matrix.h
        src/glm/simd/packing.h
        src/glm/simd/platform.h
        src/glm/simd/trigonometric.h
        src/glm/simd/vector_relational.h
        src/glm/common.hpp
        src/glm/exponential.hpp
        src/glm/ext.hpp
        src/glm/fwd.hpp
        src/glm/geometric.hpp
        src/glm/glm.hpp
        src/glm/integer.hpp
        src/glm/mat2x2.hpp
        src/glm/mat2x3.hpp
        src/glm/mat2x4.hpp
        src/glm/mat3x2.hpp
        src/glm/mat3x3.hpp
        src/glm/mat3x4.hpp
        src/glm/mat4x2.hpp
        src/glm/mat4x3.hpp
        src/glm/mat4x4.hpp
        src/glm/matrix.hpp
        src/glm/packing.hpp
        src/glm/trigonometric.hpp
        src/glm/vec2.hpp
        src/glm/vec3.hpp
        src/glm/vec4.hpp
        src/glm/vector_relational.hpp
        src/moderngpu/context.hxx
        src/moderngpu/cpp11.hxx
        src/moderngpu/cta_load_balance.hxx
        src/moderngpu/cta_merge.hxx
        src/moderngpu/cta_mergesort.hxx
        src/moderngpu/cta_reduce.hxx
        src/moderngpu/cta_scan.hxx
        src/moderngpu/cta_search.hxx
        src/moderngpu/cta_segscan.hxx
        src/moderngpu/cta_segsort.hxx
        src/moderngpu/intrinsics.hxx
        src/moderngpu/kernel_bulkinsert.hxx
        src/moderngpu/kernel_bulkremove.hxx
        src/moderngpu/kernel_compact.hxx
        src/moderngpu/kernel_intervalmove.hxx
        src/moderngpu/kernel_join.hxx
        src/moderngpu/kernel_load_balance.hxx
        src/moderngpu/kernel_merge.hxx
        src/moderngpu/kernel_mergesort.hxx
        src/moderngpu/kernel_reduce.hxx
        src/moderngpu/kernel_scan.hxx
        src/moderngpu/kernel_segreduce.hxx
        src/moderngpu/kernel_segsort.hxx
        src/moderngpu/kernel_sortedsearch.hxx
        src/moderngpu/kernel_workcreate.hxx
        src/moderngpu/launch_box.hxx
        src/moderngpu/launch_params.hxx
        src/moderngpu/loadstore.hxx
        src/moderngpu/memory.hxx
        src/moderngpu/meta.hxx
        src/moderngpu/operators.hxx
        src/moderngpu/search.hxx
        src/moderngpu/sort_networks.hxx
        src/moderngpu/transform.hxx
        src/moderngpu/tuple.hxx
        src/moderngpu/types.hxx
        src/moderngpu/util.hxx
        src/nlohmann/json.hpp
        src/stb/stb.h
        src/stb/stb_c_lexer.h
        src/stb/stb_connected_components.h
        src/stb/stb_divide.h
        src/stb/stb_ds.h
        src/stb/stb_dxt.h
        src/stb/stb_easy_font.h
        src/stb/stb_herringbone_wang_tile.h
        src/stb/stb_image.h
        src/stb/stb_image_resize.h
        src/stb/stb_image_write.h
        src/stb/stb_leakcheck.h
        src/stb/stb_perlin.h
        src/stb/stb_rect_pack.h
        src/stb/stb_sprintf.h
        src/stb/stb_textedit.h
        src/stb/stb_tilemap_editor.h
        src/stb/stb_truetype.h
        src/stb/stb_vorbis.c
        src/stb/stb_voxel_render.h
        src/stb/stretchy_buffer.h
        src/tracy/Tracy.hpp
        src/tracy/TracyClient.cpp
        src/Utils/Aabb.h
        src/Utils/glm_extensions.cpp
        src/Utils/glm_extensions.h
        src/Utils/View.h
        src/Array.h
        src/Core.h
        src/CudaGLBuffer.h
        src/CudaMath.h
        src/CudaPerfRecorder.h
        src/DAG_Compression_Fast.cpp
        src/DAGCompression/CheckDAG.cu
        src/DAGCompression/CheckGPU.cu
        src/DAGCompression/Compress.cpp
        src/DAGCompression/CreateFinalDAG.cu
        src/DAGCompression/CreateSubDAG.cu
        src/DAGCompression/GenerateFragments.cu
        src/DAGCompression/MergeDAG.cu
        src/DAGCompression/DAGCompression.h
        src/DAGTracer.cu
        src/DAGTracer.h
        src/GLTFLoader.cpp
        src/GLTFLoader.h
        src/Memory.cpp
        src/Memory.h
        src/Serializer.h
        src/Utils.h
        src/cnmem.cpp
        src/cnmem.h
        src/Definitions.cpp
        src/Voxelizer.cpp
        src/Voxelizer.h)


target_link_libraries(DAG_Compression_Fast ${CUDA_LIBRARIES} ${GLEW_LIBRARIES} -lglfw -lGL)